@@ -20,6 +20,7 @@ package co.rsk.peg;
 import static co.rsk.RskTestUtils.createRepository;
 import static co.rsk.peg.PegTestUtils.createFederation;
 import static co.rsk.peg.federation.FederationTestUtils.REGTEST_FEDERATION_PRIVATE_KEYS;
+import static org.ethereum.util.ByteUtil.EMPTY_BYTE_ARRAY;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
@@ -69,7 +70,6 @@ import java.nio.file.StandardCopyOption;
 import java.security.*;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.bouncycastle.util.BigIntegers;
 import org.bouncycastle.util.encoders.Hex;
@@ -235,7 +235,7 @@ public class BridgeSupportIT {
         bridgeSupport.getBtcBlockchainBestChainHeight();
 
         // assert
-        assertGenesisFedCreationTimeIsCheckpointBestChainHeight(bridgeMainNetConstants);
+        assertGenesisFedCreationTimeIsCheckpointBestChainHeight();
     }
 
     @ParameterizedTest
@@ -248,7 +248,7 @@ public class BridgeSupportIT {
     void initialChainHeadWithBtcCheckpoints_whenCheckpointsWith12BytesChainWork_before_RSKIP454_ok(
         String checkpointFileName) throws Exception {
         // arrange
-        arrangeCheckpointsSource(checkpointFileName, bridgeMainNetConstants);
+        arrangeCheckpointsSource(checkpointFileName);
 
         activations =  ActivationConfigsForTest.arrowhead631().forBlock(0);
 
@@ -274,12 +274,11 @@ public class BridgeSupportIT {
         // act
         // Force instantiation of blockstore
         bridgeSupport.getBtcBlockchainBestChainHeight();
-        assertGenesisFedCreationTimeIsCheckpointBestChainHeight(bridgeMainNetConstants);
+        assertGenesisFedCreationTimeIsCheckpointBestChainHeight();
     }
 
-    private void arrangeCheckpointsSource(String checkpointFileName,
-        BridgeConstants bridgeConstants) throws IOException {
-        String checkpointToCreate = "/rskbitcoincheckpoints/" + bridgeConstants.getBtcParams().getId() + ".checkpoints";
+    private void arrangeCheckpointsSource(String checkpointFileName) throws IOException {
+        String checkpointToCreate = "/rskbitcoincheckpoints/" + BridgeSupportIT.bridgeMainNetConstants.getBtcParams().getId() + ".checkpoints";
 
         Path target = Paths.get(getClass().getResource(checkpointToCreate).getPath());
 
@@ -290,7 +289,7 @@ public class BridgeSupportIT {
     @Test
     void initialChainHeadWithBtcCheckpoints_whenCheckpointsWith32BytesChainWork_before_RSKIP454_shouldFail() throws Exception {
         // arrange
-        arrangeCheckpointsSource("32-byte-chainwork.production.checkpoints", bridgeMainNetConstants);
+        arrangeCheckpointsSource("32-byte-chainwork.production.checkpoints");
         activations =  ActivationConfigsForTest.arrowhead631().forBlock(0);
 
         NetworkParameters btcNetworkParams = bridgeMainNetConstants.getBtcParams();
@@ -328,7 +327,7 @@ public class BridgeSupportIT {
     void initialChainHeadWithBtcCheckpoints_whenCheckpointsWith32BytesChainWork_after_RSKIP454_ok(
         String checkpointFileName) throws Exception {
         // arrange
-        arrangeCheckpointsSource(checkpointFileName, bridgeMainNetConstants);
+        arrangeCheckpointsSource(checkpointFileName);
         activations =  ActivationConfigsForTest.lovell700().forBlock(0);
 
         NetworkParameters btcNetworkParams = bridgeMainNetConstants.getBtcParams();
@@ -355,16 +354,15 @@ public class BridgeSupportIT {
         bridgeSupport.getBtcBlockchainBestChainHeight();
 
         // assert
-        assertGenesisFedCreationTimeIsCheckpointBestChainHeight(bridgeMainNetConstants);
+        assertGenesisFedCreationTimeIsCheckpointBestChainHeight();
     }
 
-    private void assertGenesisFedCreationTimeIsCheckpointBestChainHeight(BridgeConstants bridgeConstants)
-        throws BlockStoreException, IOException {
+    private void assertGenesisFedCreationTimeIsCheckpointBestChainHeight() throws IOException, BlockStoreException {
         InputStream checkpointsStream = bridgeSupport.getCheckPoints();
-        CheckpointManager manager = new CheckpointManager(bridgeConstants.getBtcParams(),
+        CheckpointManager manager = new CheckpointManager(BridgeSupportIT.bridgeMainNetConstants.getBtcParams(),
             checkpointsStream);
 
-        /**
+        /*
          * Time to use in CheckpointManager adjust checkpoint backwards by a week to account for possible clock drift in the block headers.
          * For more detail please see {@link CheckpointManager#checkpoint(NetworkParameters, InputStream, co.rsk.bitcoinj.store.BtcBlockStore, long)}
          */
@@ -387,7 +385,7 @@ public class BridgeSupportIT {
 
         when(feePerKbSupport.getFeePerKb()).thenReturn(expected);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -412,7 +410,7 @@ public class BridgeSupportIT {
         assertEquals(1, locator.size());
         assertEquals(btcParams.getGenesisBlock().getHash(), locator.get(0));
 
-        List<BtcBlock> blocks = createBtcBlocks(btcParams, btcParams.getGenesisBlock(), 10);
+        List<BtcBlock> blocks = createBtcBlocks(btcParams, btcParams.getGenesisBlock());
         bridgeSupport.receiveHeaders(blocks.toArray(new BtcBlock[]{}));
         locator = bridgeSupport.getBtcBlockchainBlockLocator();
         assertEquals(6, locator.size());
@@ -430,7 +428,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory btcBlockStoreFactory = new RepositoryBtcBlockStoreWithCache.Factory(
             bridgeRegTestConstants.getBtcParams());
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        List<BtcBlock> checkpoints = createBtcBlocks(btcParams, btcParams.getGenesisBlock(), 10);
+        List<BtcBlock> checkpoints = createBtcBlocks(btcParams, btcParams.getGenesisBlock());
 
         FederationStorageProvider federationStorageProvider = createFederationStorageProvider(track);
         FederationSupport federationSupport = federationSupportBuilder
@@ -439,7 +437,7 @@ public class BridgeSupportIT {
             .withActivations(activationsBeforeForks)
             .build();
 
-        BridgeSupport bridgeSupport = new BridgeSupport(
+        bridgeSupport = new BridgeSupport(
             bridgeRegTestConstants,
             provider,
             mock(BridgeEventLogger.class),
@@ -476,7 +474,7 @@ public class BridgeSupportIT {
         assertEquals(1, locator.size());
         assertEquals(checkpoints.get(9).getHash(), locator.get(0));
 
-        List<BtcBlock> blocks = createBtcBlocks(btcParams, checkpoints.get(9), 10);
+        List<BtcBlock> blocks = createBtcBlocks(btcParams, checkpoints.get(9));
         bridgeSupport.receiveHeaders(blocks.toArray(new BtcBlock[]{}));
         locator = bridgeSupport.getBtcBlockchainBlockLocator();
         assertEquals(6, locator.size());
@@ -488,7 +486,8 @@ public class BridgeSupportIT {
         assertEquals(checkpoints.get(9).getHash(), locator.get(5));
     }
 
-    private List<BtcBlock> createBtcBlocks(NetworkParameters networkParameters, BtcBlock parent, int numberOfBlocksToCreate) {
+    private List<BtcBlock> createBtcBlocks(NetworkParameters networkParameters, BtcBlock parent) {
+        int numberOfBlocksToCreate = 10;
         List<BtcBlock> list = new ArrayList<>();
         for (int i = 0; i < numberOfBlocksToCreate; i++) {
             BtcBlock block = new BtcBlock(
@@ -561,7 +560,7 @@ public class BridgeSupportIT {
             .withActivations(activationsBeforeForks)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -638,7 +637,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -767,7 +766,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(rskCurrentBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(providerForSupport)
             .withRepository(track)
@@ -873,7 +872,7 @@ public class BridgeSupportIT {
                 .withRskExecutionBlock(rskCurrentBlock)
                 .build();
 
-            BridgeSupport bridgeSupport = bridgeSupportBuilder
+            bridgeSupport = bridgeSupportBuilder
                 .withBridgeConstants(bridgeRegTestConstants)
                 .withProvider(provider)
                 .withRepository(track)
@@ -915,7 +914,7 @@ public class BridgeSupportIT {
             .withFederationConstants(federationConstants)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -967,7 +966,7 @@ public class BridgeSupportIT {
             .withFederationConstants(federationConstants)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1037,7 +1036,7 @@ public class BridgeSupportIT {
         tx.sign(new org.ethereum.crypto.ECKey().getPrivKeyBytes());
 
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1074,7 +1073,7 @@ public class BridgeSupportIT {
         tx.sign(new org.ethereum.crypto.ECKey().getPrivKeyBytes());
 
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1114,7 +1113,7 @@ public class BridgeSupportIT {
 
         track.saveCode(tx.getSender(), new byte[]{0x1});
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1138,7 +1137,7 @@ public class BridgeSupportIT {
 
         provider.setHeightBtcTxhashAlreadyProcessed(tx.getHash(), 1L);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1169,7 +1168,7 @@ public class BridgeSupportIT {
         BtcTransaction tx = createTransaction();
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1208,7 +1207,7 @@ public class BridgeSupportIT {
         BtcTransaction tx = createTransaction();
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1247,7 +1246,7 @@ public class BridgeSupportIT {
         BtcTransaction tx = createTransaction();
         BridgeStorageProvider provider = new BridgeStorageProvider(track, bridgeRegTestConstants.getBtcParams(), activationsBeforeForks);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1301,7 +1300,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(any(), any(), any(), any())).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeConstantsMock)
             .withBtcBlockStoreFactory(mockFactory)
             .build();
@@ -1338,7 +1337,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1438,7 +1437,7 @@ public class BridgeSupportIT {
             .withFederationStorageProvider(federationStorageProvider)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1496,7 +1495,7 @@ public class BridgeSupportIT {
         List<BtcECKey> activeFederationKeys = Stream.of(
             BtcECKey.fromPrivate(Hex.decode("fa01")),
             BtcECKey.fromPrivate(Hex.decode("fa02"))
-        ).sorted(BtcECKey.PUBKEY_COMPARATOR).collect(Collectors.toList());
+        ).sorted(BtcECKey.PUBKEY_COMPARATOR).toList();
 
         List<FederationMember> activeFederationMembers = FederationTestUtils.getFederationMembersWithBtcKeys(activeFederationKeys);
         FederationArgs activeFedArgs = new FederationArgs(activeFederationMembers,
@@ -1511,7 +1510,7 @@ public class BridgeSupportIT {
         List<BtcECKey> retiringFederationKeys = Stream.of(
             BtcECKey.fromPrivate(Hex.decode("fb01")),
             BtcECKey.fromPrivate(Hex.decode("fb02"))
-        ).sorted(BtcECKey.PUBKEY_COMPARATOR).collect(Collectors.toList());
+        ).sorted(BtcECKey.PUBKEY_COMPARATOR).toList();
 
         List<FederationMember> retiringFederationMembers = FederationTestUtils.getFederationMembersWithBtcKeys(retiringFederationKeys);
         FederationArgs retiringFedArgs = new FederationArgs(retiringFederationMembers,
@@ -1575,7 +1574,7 @@ public class BridgeSupportIT {
             .withRskExecutionBlock(executionBlock)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -1614,7 +1613,7 @@ public class BridgeSupportIT {
         track.commit();
 
         List<UTXO> activeFederationBtcUTXOs = federationStorageProvider.getNewFederationBtcUTXOs(btcParams, activations);
-        List<Coin> activeFederationBtcCoins = activeFederationBtcUTXOs.stream().map(UTXO::getValue).collect(Collectors.toList());
+        List<Coin> activeFederationBtcCoins = activeFederationBtcUTXOs.stream().map(UTXO::getValue).toList();
         assertThat(activeFederationBtcUTXOs, hasSize(1));
         assertThat(activeFederationBtcCoins, hasItem(Coin.COIN));
     }
@@ -1627,7 +1626,7 @@ public class BridgeSupportIT {
             .map(Hex::decode)
             .map(BtcECKey::fromPrivate)
             .sorted(BtcECKey.PUBKEY_COMPARATOR)
-            .collect(Collectors.toList());
+            .toList();
 
         List<FederationMember> activeFederationMembers = FederationTestUtils.getFederationMembersWithBtcKeys(activeFederationKeys);
         FederationArgs activeFedArgs = new FederationArgs(
@@ -1709,7 +1708,7 @@ public class BridgeSupportIT {
             .withActivations(activationsBeforeForks)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withBtcBlockStoreFactory(mockFactory)
             .withExecutionBlock(rskCurrentBlock)
@@ -1818,7 +1817,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withBtcLockSenderProvider(new BtcLockSenderProvider())
@@ -1899,7 +1898,7 @@ public class BridgeSupportIT {
 
     @Test
     void isBtcTxHashAlreadyProcessed() throws IOException {
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(getBridgeStorageProviderMockWithProcessedHashes())
             .withRepository(null)
@@ -1913,7 +1912,7 @@ public class BridgeSupportIT {
 
     @Test
     void getBtcTxHashProcessedHeight() throws IOException {
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(getBridgeStorageProviderMockWithProcessedHashes())
             .withRepository(null)
@@ -1939,7 +1938,7 @@ public class BridgeSupportIT {
             Stream.iterate(1, i -> i + 1)
                 .limit(6)
                 .map(i -> BtcECKey.fromPrivate(BigInteger.valueOf((i) * 100)))
-                .collect(Collectors.toList())),
+                .toList()),
             Instant.ofEpochMilli(1000),
             0L,
             NetworkParameters.fromID(NetworkParameters.ID_REGTEST)
@@ -1947,7 +1946,7 @@ public class BridgeSupportIT {
         Federation genesisFederation = FederationFactory.buildStandardMultiSigFederation(
             genesisFedArgs
         );
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(true, activeFederation, genesisFederation, null, null, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(true, activeFederation, genesisFederation, null, null, null, null);
 
         assertEquals(6, bridgeSupport.getActiveFederationSize().intValue());
         assertEquals(4, bridgeSupport.getActiveFederationThreshold().intValue());
@@ -1993,7 +1992,7 @@ public class BridgeSupportIT {
         Federation genesisFederation = FederationFactory.buildStandardMultiSigFederation(
             genesisFedArgs
         );
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             activeFederation,
             genesisFederation,
@@ -2039,7 +2038,7 @@ public class BridgeSupportIT {
         Block mockedBlock = mock(Block.class);
         when(mockedBlock.getNumber()).thenReturn(26L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             newFederation,
             null,
@@ -2085,7 +2084,7 @@ public class BridgeSupportIT {
         Block mockedBlock = mock(Block.class);
         when(mockedBlock.getNumber()).thenReturn(20L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             newFederation,
             null,
@@ -2110,7 +2109,7 @@ public class BridgeSupportIT {
 
     @Test
     void getRetiringFederationMethods_none() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
 
         assertTrue(bridgeSupport.getRetiringFederationSize().isEmpty());
         assertTrue(bridgeSupport.getRetiringFederationThreshold().isEmpty());
@@ -2146,7 +2145,7 @@ public class BridgeSupportIT {
         // New federation should not be active in this block
         when(mockedBlock.getNumber()).thenReturn(15L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null, mockedOldFederation,
@@ -2190,7 +2189,7 @@ public class BridgeSupportIT {
         // New federation should be active in this block
         when(mockedBlock.getNumber()).thenReturn(25L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null, mockedOldFederation,
@@ -2245,19 +2244,19 @@ public class BridgeSupportIT {
 
     @Test
     void getPendingFederationMethods_none() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, null, null, null);
 
         assertEquals(-1, bridgeSupport.getPendingFederationSize().intValue());
-        assertNull(bridgeSupport.getPendingFederatorBtcPublicKey(0));
-        assertNull(bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
-        assertNull(bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
-        assertNull(bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
+        assertArrayEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorBtcPublicKey(0));
+        assertArrayEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.BTC));
+        assertArrayEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.RSK));
+        assertArrayEquals(EMPTY_BYTE_ARRAY, bridgeSupport.getPendingFederatorPublicKeyOfType(0, FederationMember.KeyType.MST));
     }
 
     @Test
     void getPendingFederationMethods_present() {
         PendingFederation mockedPendingFederation = new PendingFederation(FederationTestUtils.getFederationMembers(5));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, mockedPendingFederation, null, null);
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(false, null, null, null, mockedPendingFederation, null, null);
 
         assertEquals(5, bridgeSupport.getPendingFederationSize().intValue());
         List<FederationMember> members = FederationTestUtils.getFederationMembers(5);
@@ -2283,7 +2282,7 @@ public class BridgeSupportIT {
 
     @Test
     void voteFederationChange_methodNotAllowed() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2301,7 +2300,7 @@ public class BridgeSupportIT {
 
     @Test
     void voteFederationChange_notAuthorized() {
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2326,7 +2325,7 @@ public class BridgeSupportIT {
         private final Transaction tx;
         private ABICallSpec winner;
 
-        public VotingMocksProvider(String function, byte[][] arguments, boolean mockVoteResult) {
+        VotingMocksProvider(String function, byte[][] arguments, boolean mockVoteResult) {
             byte[] voterBytes = ECKey.fromPublicOnly(Hex.decode(
                 // Public key hex of an authorized voter in regtest, taken from BridgeRegTestConstants
                 "04dde17c5fab31ffc53c91c2390136c325bb8690dc135b0840075dd7b86910d8ab9e88baad0c32f3eea8833446a6bc5ff1cd2efa99ecb17801bcb65fc16fc7d991"
@@ -2378,7 +2377,7 @@ public class BridgeSupportIT {
     void createFederation_ok() {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("create", new byte[][]{}, true);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2407,7 +2406,7 @@ public class BridgeSupportIT {
     void createFederation_pendingExists() {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("create", new byte[][]{}, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2453,7 +2452,7 @@ public class BridgeSupportIT {
         // New federation should be waiting for activation in this block
         when(mockedBlock.getNumber()).thenReturn(19L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null,
@@ -2504,7 +2503,7 @@ public class BridgeSupportIT {
         // New federation should be active in this block
         when(mockedBlock.getNumber()).thenReturn(21L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null,
@@ -2534,7 +2533,7 @@ public class BridgeSupportIT {
         }, true);
 
         PendingFederation pendingFederation = new PendingFederation(Collections.emptyList());
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2584,7 +2583,7 @@ public class BridgeSupportIT {
         PendingFederation pendingFederation = new PendingFederation(FederationTestUtils.getFederationMembersWithKeys(Collections.singletonList(
             BtcECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2649,7 +2648,7 @@ public class BridgeSupportIT {
             Hex.decode("036bb9eab797eadc8b697f0e82a01d01cabbfaaca37e5bafc06fdc6fdd38af894a")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2676,7 +2675,7 @@ public class BridgeSupportIT {
         PendingFederation pendingFederation = new PendingFederation(FederationTestUtils.getFederationMembersWithKeys(Collections.singletonList(
             BtcECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2700,7 +2699,7 @@ public class BridgeSupportIT {
             Hex.decode("aabbccdd")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2727,7 +2726,7 @@ public class BridgeSupportIT {
         }, true);
 
         PendingFederation pendingFederation = new PendingFederation(Collections.emptyList());
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2777,7 +2776,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("02a23343f50363dc9a4c29f0c0a8386780cc8bf469211f4de51d50f8c0f274e9a7")),
             ECKey.fromPublicOnly(Hex.decode("030dd584c286275ab2ce249096d0d7e6c78853e0902db061b14f2e39df068f95bc"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2836,7 +2835,7 @@ public class BridgeSupportIT {
             Hex.decode("0304d9178db5e243667824188f86f7507104d0e237838bfb22bb4af592a8bca08a")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2867,7 +2866,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("03981d06bd7bc419612aa09f860188f08d3c3010796dcb41cdfc43a6875600efa8")),
             ECKey.fromPublicOnly(Hex.decode("0365e45f68d6347aaa03c76f3d6f47000df6090801e49eef6d49f547f5c19de5dd"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2898,7 +2897,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("02cf0dec68ca34502e4ebd35c40a0e66ff47ba520f0418bcd7388717b12ab4b053")),
             ECKey.fromPublicOnly(Hex.decode("0365e45f68d6347aaa03c76f3d6f47000df6090801e49eef6d49f547f5c19de5dd"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2929,7 +2928,7 @@ public class BridgeSupportIT {
             ECKey.fromPublicOnly(Hex.decode("033174d2fb7a3d7a0c87d43fa3e9ba43d4962014960b82bcd793706c05f68111c8")),
             ECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2955,7 +2954,7 @@ public class BridgeSupportIT {
             Hex.decode("029664581b2e8dc9ba7885696a03134aaebe4be834ce0049d62f80499bbe130206")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -2981,7 +2980,7 @@ public class BridgeSupportIT {
             Hex.decode("029664581b2e8dc9ba7885696a03134aaebe4be834ce0049d62f80499bbe130206")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3007,7 +3006,7 @@ public class BridgeSupportIT {
             Hex.decode("aabbccdd")
         }, false);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3033,7 +3032,7 @@ public class BridgeSupportIT {
             BtcECKey.fromPublicOnly(Hex.decode("036bb9eab797eadc8b697f0e82a01d01cabbfaaca37e5bafc06fdc6fdd38af894a")),
             BtcECKey.fromPublicOnly(Hex.decode("031da807c71c2f303b7f409dd2605b297ac494a563be3b9ca5f52d95a43d183cc5"))
         )));
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3062,7 +3061,7 @@ public class BridgeSupportIT {
     void rollbackFederation_noPendingFederation() {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("rollback", new byte[][]{}, true);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3136,7 +3135,7 @@ public class BridgeSupportIT {
         when(federationStorageProvider.getPendingFederation()).thenReturn(pendingFederation);
         when(federationStorageProvider.getFederationElection(any())).thenReturn(mocksProvider.getElection());
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             federationStorageProvider,
             newFederation,
             pendingFederation,
@@ -3195,7 +3194,7 @@ public class BridgeSupportIT {
         VotingMocksProvider mocksProvider = new VotingMocksProvider("commit", new byte[][]{
             new Keccak256(HashUtil.keccak256(Hex.decode("aabbcc"))).getBytes()
         }, true);
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3223,7 +3222,7 @@ public class BridgeSupportIT {
             new Keccak256(HashUtil.keccak256(Hex.decode("aabbcc"))).getBytes()
         }, true);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3254,7 +3253,7 @@ public class BridgeSupportIT {
             true
         );
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             null,
             null,
@@ -3287,7 +3286,7 @@ public class BridgeSupportIT {
             expectedFederationArgs
         );
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             expectedFederation,
             null,
@@ -3344,7 +3343,7 @@ public class BridgeSupportIT {
         Block mockedBlock = mock(Block.class);
         when(mockedBlock.getNumber()).thenReturn(25L);
 
-        BridgeSupport bridgeSupport = getBridgeSupportWithMocksForFederationTests(
+        bridgeSupport = getBridgeSupportWithMocksForFederationTests(
             false,
             mockedNewFederation,
             null,
@@ -3381,7 +3380,7 @@ public class BridgeSupportIT {
         Repository repository = createRepository();
         BtcBlockStoreWithCache.Factory btcBlockStoreFactory = new RepositoryBtcBlockStoreWithCache.Factory(
             bridgeRegTestConstants.getBtcParams());
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(null)
             .withRepository(repository)
@@ -3416,7 +3415,7 @@ public class BridgeSupportIT {
             bridgeRegTestConstants.getBtcParams(),
             activationsBeforeForks
         );
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3459,7 +3458,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3502,7 +3501,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3545,7 +3544,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3588,7 +3587,7 @@ public class BridgeSupportIT {
 
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3632,7 +3631,7 @@ public class BridgeSupportIT {
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
         Sha256Hash btcTransactionHash = Sha256Hash.of(Hex.decode("112233"));
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3673,7 +3672,7 @@ public class BridgeSupportIT {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(track, bridgeRegTestConstants, provider, activations)).thenReturn(btcBlockStore);
 
-        BridgeSupport bridgeSupport =
+        bridgeSupport =
             bridgeSupportBuilder
                 .withBridgeConstants(bridgeRegTestConstants)
                 .withProvider(provider)
@@ -3705,7 +3704,7 @@ public class BridgeSupportIT {
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3734,7 +3733,7 @@ public class BridgeSupportIT {
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3764,7 +3763,7 @@ public class BridgeSupportIT {
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3800,7 +3799,7 @@ public class BridgeSupportIT {
             .withFederationConstants(federationConstants)
             .build();
 
-        BridgeSupport bridgeSupport = bridgeSupportBuilder
+        bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeRegTestConstants)
             .withProvider(provider)
             .withRepository(track)
@@ -3818,7 +3817,7 @@ public class BridgeSupportIT {
         assertThrows(IndexOutOfBoundsException.class, () -> bridgeSupport.getBtcBlockchainBlockHashAtDepth(-1));
         assertThrows(IndexOutOfBoundsException.class, () -> bridgeSupport.getBtcBlockchainBlockHashAtDepth(1));
 
-        List<BtcBlock> blocks = createBtcBlocks(btcParams, btcParams.getGenesisBlock(), 10);
+        List<BtcBlock> blocks = createBtcBlocks(btcParams, btcParams.getGenesisBlock());
         bridgeSupport.receiveHeaders(blocks.toArray(new BtcBlock[]{}));
 
         assertEquals(btcParams.getGenesisBlock().getHash(), bridgeSupport.getBtcBlockchainBlockHashAtDepth(10));
